# oracledb-vertexai-demo

./: .dockerignore  .env.example  .eslintrc.cjs  .geminiignore  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  ADK2.md  AGENTS.md  ENHANCEMENTS.md  Makefile  README.md  SLIDES.md  STYLE_GUIDE.md  clear_intent_cache.py  docker-compose.yml  manage.py  mkdocs.yml  package-lock.json  package.json  postcss.config.cjs  pyproject.toml  run_tests.sh  tailwind.config.js  tsconfig.json  vite.config.ts
.agent/: beads.json  flows.md  index.md  patterns.md  product-guidelines.md  product.md  setup-state.json  tech-stack.md  workflow.md
.agent/code-styleguides/: python.md
.agent/knowledge/: adk-chat-dashboard_20260225.md  fix-tests-and-runner_20260226.md  idempotent-install-commands_20251010.md  index.md  initial-setup-synthesis_20260225.md  migrate-to-adk-runner_20251010.md  migrate-to-dishka-di_20251020.md  modernize-oracle-schema_20251017.md  oracle-23ai-features_20251017.md
.agent/research/: legacy_guides_combined.txt
.agents/: .gitignore  flows.md  index.md  patterns.md  product-guidelines.md  product.md  setup-state.json  tech-stack.md  workflow.md
.agents/code-styleguides/: bash.md  python.md  typescript.md
.agents/knowledge/: adk-chat-dashboard_20260225.md  cymbal-coffee-reset_20260429.md  documentation-setup_20260429.md  fix-tests-and-runner_20260226.md  htmx-vite-frontend_20260429.md  index.md  oracle-23ai-features_20251017.md  project-guide.md  pyapp-packaging_20260429.md  test-suite-reorganization_20260501.md  ui-regression-recovery_20260501.md  vector-calculator_20260429.md
.agents/plans/: beautify-ui.md  camelized.md  htmx-retirement_20260226.md  installation-simplification.md  lab.md
.bugs/: embedding-cache-analysis.md
.gemini/: GEMINI.md  README.md  persona.md  primer.md
.gemini/agents/: docs-vision.md  expert.md  planner.md  testing.md
.gemini/commands/: implement.toml  prd.toml  review.toml  test.toml
.gemini/prompts/: implement.md  plan.md  prd.md  review.md  test.md
.gemini/tools/: detect_mcp.py
.gemini/workflows/: implement.md  plan.md  review.md
.github/: dependabot.yaml
.github/workflows/: ci.yml  docs.yml  release.yml
app/: __init__.py  __main__.py  __metadata__.py  asgi.py  cli.py  config.py  ioc.py  schemas.py
app/cli/: __init__.py  autonomous.py  commands.py  utils.py
app/config/: __init__.py  app.py  base.py  constants.py
app/db/: models.py  unit_of_work.py  utils.py
app/domain/: __init__.py
app/lib/: context.py  dependencies.py  deps.py  di.py  exceptions.py  fixtures.py  log.py  schema.py  service.py  settings.py
app/server/: asgi.py  builder.py  controllers.py  core.py  deps.py  exception_handlers.py  plugins.py  providers.py  startup.py
app/services/: __init__.py  _cache.py  _exemplar.py  _intent.py  _metrics.py  _persona_manager.py  _product.py  _store.py  _vertex_ai.py  account.py  base.py  browser_session.py  bulk_embedding.py  cache.py  chat_conversation.py  company.py  embedding_cache.py  exemplar.py  intent.py  intent_exemplar.py  intent_router.py  inventory.py  locator.py  metrics.py  oracle_metrics.py  persona_manager.py  product.py  product_recommendation.py  recommendation.py  response_cache.py  search_metrics.py  shop.py  store.py  user_session.py  vector_demo.py  vertex_ai.py
app/static/: site.webmanifest
app/utils/: __init__.py  env.py  fixtures.py  serialization.py
deploy/oracle/: db-init.sql
docs/: __init__.py  architecture-updates.md  conf.py  htmx-events.md  htmx-migration-summary.md  index.md  lab-cloud-run.md  lab-gce.md  lab.md  litestar-integrations.md  maps.md  mcp-antigravity.md  migration-guide.md  tour.md
docs/_static/: custom.css
docs/concepts/: agent-flow.md  rag.md  vector-search.md
docs/guides/: README.md  adk-agent-patterns.md  autonomous-database-setup.md  gemini-mcp-integration.md  litestar-framework.md  manage-cli-guide.md  oracle-deployment-tools.md  oracle-json.md  sqlcl-usage-guide.md  sqlspec-patterns.md  vertex-ai-integration.md
docs/reference/: api.md  brand-assets.md  cli.md  developers.md  internals.md  quickstart.md
docs/system/: 01-technical-overview.md  02-oracle-architecture.md  03-system-architecture.md  04-ai-rag-explained.md  05-implementation-guide.md  06-operations-manual.md  07-demo-scenarios.md  08-performance-metrics.md  09-future-roadmap.md  OVERVIEW.md  README.md
resources/: main.css  main.tsx
resources/components/: container.tsx  icons.tsx  input-error.tsx  logo.tsx  theme-provider.tsx  theme-toggle.tsx
resources/layouts/: default.tsx
resources/lib/: utils.ts
resources/types/: global.d.ts  vite-env.d.ts
scripts/: pre-build.py
specs/: AGENTS.md  README.md
specs/agents/: docs-vision.md  expert.md  planner.md  prd.md  testing.md
specs/example-requirement/: prd.md  progress.md  recovery.md  tasks.md
specs/guides/: README.md  adk-agent-patterns.md  architecture.md  autonomous-database-setup.md  gemini-mcp-integration.md  litestar-framework.md  oracle-deployment-tools.md  oracle-json.md  oracle-performance.md  oracle-vector-search.md  quality-gates.yaml  sqlcl-usage-guide.md
specs/workflows/: implement.md  plan.md  prd.md  review.md  test.md
src/apex/: README.md
src/app/: __init__.py  __main__.py  __metadata__.py  config.py  ioc.py
src/js/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
src/resources/: charts.js  chat-stream.js  easter-egg.js  geolocation.js  main.js  package-lock.json  package.json  styles.css  telemetry.js  tsconfig.json  util.js  vector-calculator.js  vite.config.ts
src/tests/: README.md  conftest.py
tests/: conftest.py  test_oracle_services.py  test_recommendation_service.py  test_vertex_ai_service.py
tests/integration/: conftest.py  test_cache_service.py  test_company_integration.py  test_embedding_cache.py  test_fixtures.py  test_intent_router.py  test_oracle_deploy.py  test_product_service.py  test_response_cache.py  test_sqlspec_connection.py
tools/: MIGRATION_GUIDE.md  bundler.py  install_sqlcl.py  license_headers.py  oracle_deploy.py
(+919 files in other folders)
