[project]
authors = [{ name = "Cody Fincher", email = "cody.fincher@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "litestar[jinja,jwt,cryptography,structlog]",
    "litestar-granian[uvloop]",
    "litestar-mcp",
    "sqlspec[adk,mypyc,oracledb,performance]>=0.46",
    "python-dotenv",
    "google-adk>=2.0.0b1",
    "numpy>=2.3.3",
    "dishka>=1.4.2",
    "litestar-vite>=0.18.2",
]
description = "Reference application for Oracle 23AI and VertexAI integration."
keywords = ["litestar", "vertexai", "oracledb", "google"]
license = { text = "MIT" }
maintainers = [{ name = "Cody Fincher", email = "cody.fincher@gmail.com" }]
name = "app"
readme = "README.md"
requires-python = ">=3.11,<3.13"
version = "0.2.0"

[project.scripts]
coffee = "app.__main__:run_cli"

[tool.sqlspec]
config = "app.config.db"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "nodeenv"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["src/py", "."]
ignore-vcs = true

[tool.hatch.build.targets.sdist]
packages = ["src/py/app"]

[tool.hatch.build.targets.wheel]
artifacts = [
    "**/*.j2",
    "**/*.sql",
    "**/*.ini",
    "**/*.ico",
    "**/*.png",
    "**/*.svg",
    "**/*.css",
    "**/*.js",
    "**/*.html",
    "**/*.txt",
    "**/*.json",
]
packages = ["src/py/app"]

[dependency-groups]
build = ["bump-my-version"]
dev = [
    { include-group = "extras" },
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "build" },
]
extras = []
lint = [
    "mypy",
    "pre-commit",
    "pyright",
    "ruff",
    "slotscheck",
    "types-click",
    "types-cachetools",
    "types-python-dateutil",
    "types-requests",
    "types-psutil",
]
test = [
    "aiofiles",
    "anyio",
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-databases[valkey,oracle]",
    "pytest-mock",
    "pytest-sugar",
    "pytest-xdist",
]

[tool.ruff]

fix = true
line-length = 120
src = ["src/py", "tools"]
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "A003",    # flake8-builtins - class attribute {name} is shadowing a python builtin
    "A005",    # flake8-builtins - module {name} shadows a Python standard-library module
    "B010",    # flake8-bugbear - do not call setattr with a constant attribute value
    "D100",    # pydocstyle - missing docstring in public module
    "D101",    # pydocstyle - missing docstring in public class
    "D102",    # pydocstyle - missing docstring in public method
    "D103",    # pydocstyle - missing docstring in public function
    "D104",    # pydocstyle - missing docstring in public package
    "D105",    # pydocstyle - missing docstring in magic method
    "D106",    # pydocstyle - missing docstring in public nested class
    "D107",    # pydocstyle - missing docstring in __init__
    "D202",    # pydocstyle - no blank lines allowed after function docstring
    "D205",    # pydocstyle - 1 blank line required between summary line and description
    "D415",    # pydocstyle - first line should end with a period, question mark, or exclamation point
    "E501",    # pydocstyle line too long, handled by black
    "PLW2901", # pylint - for loop variable overwritten by assignment target
    "RUF012",  # Ruff-specific rule - annotated with classvar
    "ANN401",  # Dynamically typed expressions (Any)
    "FBT",     # Boolean trap
    "PLR0913", # too many arguments
    "PT",      # Pytest rules
    "TD",      # Todo rules
    "ARG001",  # ignore for now; investigate
    "ARG002",  # ignore for now; investigate
    "ARG003",  # ignore for now; investigate
    "PERF203", # ignore for now; investigate
    "PLR0912", # Too many branches
    "ISC001",  # Implicit string concatenation
    "COM812",  # Trailing comma
    "CPY001",  # Copyright notice
    "PGH003",  # Blanket type ignore
    "FA100",   # Future annotations
    "PLC0415", # import should be at the top of the file
    "PLR0904", # too many public methods
    "PLR0917", # Too many positional arguments
    "PLC2701", # Import private name
    "PLW3201", # Bad dunder method name
    "PLR6301", # No self use
]
select = ["ALL"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]

[tool.ruff.lint.isort]
known-first-party = ["tests", "app", "config"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"src/py/tests/*.py" = ["D103", "S101", "D104", "PLR2004"]
"src/py/tests/**/*.py" = ["D103", "S101", "D104", "PLR2004"]
"tools/*.py" = ["INP001", "ERA001", "N999"]
"tools/**/*.*" = ["D", "ARG", "EM", "TRY", "G", "FBT", "INP001", "S603", "S404", "PLR0915"]

[tool.slotscheck]
strict-imports = false

[tool.codespell]
ignore-words-list = "alog, uv.lock, src/js/package-lock.json"

[tool.mypy]
disallow_any_generics = false
exclude = '''(?x)(
^.venv/
)'''
plugins = []
strict = true
warn_unreachable = true


[[tool.mypy.overrides]]
ignore_errors = true
module = ["app.db.migrations.*"]

[tool.pytest.ini_options]
addopts = ["-ra"]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:google.*",
    "ignore::PendingDeprecationWarning",
]
markers = ["slow: marks tests as slow (integration/runtime checks)"]
pythonpath = ["src/py"]
testpaths = ["src/py/tests"]

[tool.pyright]
exclude = ["docs", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]
extraPaths = ["src/py"]
include = ["src/py/app", "src/py/tests"]
reportMissingImports = "information"
