[project]
authors = [{ name = "Cody Fincher", email = "cody.fincher@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "litestar[jinja,jwt,cryptography,structlog]",
    "litestar-granian[uvloop]",
    "litestar-mcp",
    "sqlspec[adk,mypyc,oracledb,performance]==0.50.0",

    "python-dotenv",
    "google-adk>=2.0.0b1",
    "numpy>=2.3.3",
    "dishka>=1.4.2",
    "litestar-vite>=0.23.2",
]
description = "Reference application for Oracle 26ai and Vertex AI integration."
keywords = ["litestar", "vertexai", "oracledb", "google"]
license = { text = "MIT" }
maintainers = [{ name = "Cody Fincher", email = "cody.fincher@gmail.com" }]
name = "app"
readme = "README.md"
requires-python = ">=3.11,<3.15"
version = "0.2.2"

[project.scripts]
coffee = "app.__main__:run_cli"


[tool.bumpversion]
allow_dirty = true
commit = false
commit_args = "--no-verify"
current_version = "0.2.2"
ignore_missing_files = false
ignore_missing_version = false
message = "chore(release): bump to `v{new_version}`"
parse = """(?x)
    (?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)
    (-(?P<pre>alpha|beta|rc)\\.(?P<pre_n>\\d+))?
"""
regex = false
replace = "{new_version}"
search = "{current_version}"
serialize = [
    "{major}.{minor}.{patch}",
    "{major}.{minor}.{patch}-{pre}.{pre_n}",
]
sign_tags = false
tag = false
tag_message = "chore(release): v{new_version}"
tag_name = "v{new_version}"

[tool.bumpversion.parts.pre]
optional_value = "stable"
first_value = "stable"
values = ["alpha", "beta", "rc", "stable"]

[tool.bumpversion.parts.pre_n]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
replace = 'version = "{new_version}"'
search = 'version = "{current_version}"'

[[tool.bumpversion.files]]
filename = "src/resources/package.json"
replace = '"version": "{new_version}"'
search = '"version": "{current_version}"'

[[tool.bumpversion.files]]
filename = "src/resources/package-lock.json"
replace = """
  "name": "cymbal-coffee",
  "version": "{new_version}",
"""
search = """
  "name": "cymbal-coffee",
  "version": "{current_version}",
"""

[[tool.bumpversion.files]]
filename = "src/resources/package-lock.json"
replace = """
      "name": "cymbal-coffee",
      "version": "{new_version}",
"""
search = """
      "name": "cymbal-coffee",
      "version": "{current_version}",
"""

[[tool.bumpversion.files]]
filename = "src/app/__metadata__.py"
replace = '__version__ = "{new_version}"'
search = '__version__ = "{current_version}"'

[[tool.bumpversion.files]]
filename = "src/app/__metadata__.py"
regex = true
replace = '__package_date__ = "{utcnow:%Y-%m-%dT%H:%M:%SZ}"'
search = '__package_date__ = "[^"]+"'

[tool.sqlspec]
config = "app.config.db"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "nodeenv"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["src", "."]
ignore-vcs = true

[tool.hatch.build.targets.sdist]
packages = ["src/app"]

[tool.hatch.build.targets.wheel]
artifacts = [
    "**/*.j2",
    "**/*.sql",
    "**/*.ini",
    "**/*.ico",
    "**/*.png",
    "**/*.svg",
    "**/*.css",
    "**/*.js",
    "**/*.html",
    "**/*.txt",
    "**/*.json",
]
packages = ["src/app"]

[dependency-groups]
build = ["bump-my-version"]
dev = [
    { include-group = "extras" },
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "build" },
    { include-group = "docs" },
]
docs = [
    "sphinx>=9.0.4,<10",
    "sphinx-immaterial>=0.13.0",
    "myst-parser>=4.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "sphinx-autobuild>=2024.10",
    "sphinx-autodoc-typehints>=2.5",
    "sphinxcontrib-mermaid>=1.0",
    "linkify-it-py>=2.0",
]
extras = []
lint = [
    "mypy",
    "pre-commit",
    "pyright",
    "ruff",
    "slotscheck",
    "types-click",
    "types-cachetools",
    "types-python-dateutil",
    "types-requests",
    "types-psutil",
]
test = [
    "aiofiles",
    "anyio",
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "pytest-xdist",
]

[tool.ruff]

extend-exclude = [".agents"]
fix = true
line-length = 120
preview = true
src = ["src", "tools"]
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "A003",    # flake8-builtins - class attribute {name} is shadowing a python builtin
    "A005",    # flake8-builtins - module {name} shadows a Python standard-library module
    "B008",    # flake8-bugbear - do not perform function call in argument defaults (Litestar's Dependency/Parameter idiom)
    "B010",    # flake8-bugbear - do not call setattr with a constant attribute value
    "D100",    # pydocstyle - missing docstring in public module
    "D101",    # pydocstyle - missing docstring in public class
    "D102",    # pydocstyle - missing docstring in public method
    "D103",    # pydocstyle - missing docstring in public function
    "D104",    # pydocstyle - missing docstring in public package
    "D105",    # pydocstyle - missing docstring in magic method
    "D106",    # pydocstyle - missing docstring in public nested class
    "D107",    # pydocstyle - missing docstring in __init__
    "D202",    # pydocstyle - no blank lines allowed after function docstring
    "D205",    # pydocstyle - 1 blank line required between summary line and description
    "D415",    # pydocstyle - first line should end with a period, question mark, or exclamation point
    "DOC",     # pydoclint - docstring content policy is too noisy for this app gate
    "E501",    # pydocstyle line too long, handled by black
    "PLW2901", # pylint - for loop variable overwritten by assignment target
    "RUF012",  # Ruff-specific rule - annotated with classvar
    "RUF067",  # Ruff-specific rule - __init__ module registry contracts are intentional
    "ANN401",  # Dynamically typed expressions (Any)
    "FBT",     # Boolean trap
    "PLR0913", # too many arguments
    "PT",      # Pytest rules
    "TD",      # Todo rules
    "ARG001",  # ignore for now; investigate
    "ARG002",  # ignore for now; investigate
    "ARG003",  # ignore for now; investigate
    "PERF203", # ignore for now; investigate
    "PLR0912", # Too many branches
    "ISC001",  # Implicit string concatenation
    "COM812",  # Trailing comma
    "PGH003",  # Blanket type ignore
    "FA100",   # Future annotations
    "PLC0415", # import should be at the top of the file
    "PLR0904", # too many public methods
    "PLR0917", # Too many positional arguments
    "PLC2701", # Import private name
    "PLW3201", # Bad dunder method name
    "PLR6301", # No self use
    "N818",    # Keep established exception names stable in this demo app
]
select = ["ALL"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Treat Sphinx literalinclude anchor markers as recognized task tags so they
# aren't flagged as dead code by ERA001.
task-tags = ["TODO", "FIXME", "XXX", "docs"]

[tool.ruff.lint.flake8-copyright]
author = "Google LLC"
notice-rgx = '(?i)(?:Copyright|SPDX-FileCopyrightText:)\s+(?:Copyright\s+)?(?:\(C\)\s+)?\d{4}([-,]\s*\d{4})*'

[tool.ruff.lint.pydocstyle]

convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]

[tool.ruff.lint.isort]
known-first-party = ["tests", "app", "config"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"src/tests/*.py" = [
    "ANN",
    "ARG",
    "D103",
    "D104",
    "EM",
    "PLR2004",
    "PLW1514",
    "RUF029",
    "RUF069",
    "S101",
    "S108",
    "SLF001",
    "TRY",
]
"src/tests/**/*.py" = [
    "ANN",
    "ARG",
    "D103",
    "D104",
    "EM",
    "PLR2004",
    "PLW1514",
    "RUF029",
    "RUF069",
    "S101",
    "S108",
    "SLF001",
    "TRY",
]
"tools/*.py" = ["INP001", "ERA001", "N999"]
"tools/**/*.*" = ["D", "ARG", "EM", "TRY", "G", "FBT", "INP001", "S603", "S404", "PLR0915"]

[tool.slotscheck]
strict-imports = false

[tool.codespell]
ignore-words-list = "alog, uv.lock, package-lock.json"

[tool.mypy]
disallow_any_generics = false
exclude = '''(?x)(
^.venv/
)'''
plugins = []
strict = true
warn_unreachable = true


[[tool.mypy.overrides]]
ignore_errors = true
module = ["app.db.migrations.*"]

[tool.pytest.ini_options]
addopts = ["-ra"]
filterwarnings = [
    "ignore:.*authlib\\.jose module is deprecated.*:authlib.deprecate.AuthlibDeprecationWarning:authlib\\._joserfc_helpers",
    "ignore:.*\\[EXPERIMENTAL\\] feature FeatureName\\.(PLUGGABLE_AUTH|PROGRESSIVE_SSE_STREAMING) is enabled\\.:UserWarning:google\\.adk\\.features\\._feature_decorator",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:google.*",
    "ignore::PendingDeprecationWarning",
]
markers = ["slow: marks tests as slow (integration/runtime checks)"]
pythonpath = ["src"]
testpaths = ["src/tests"]

[tool.pyright]
exclude = ["docs", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]
extraPaths = ["src"]
include = ["src/app", "src/tests"]
reportMissingImports = "information"
